--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Primer Página Grupo 51</h1>
     <p>Mi nombre es Melanie, hoy hice esta página para practicar </p>
-    
+    <p>Hola</p>
 
     <!-- esta página se realizo en facpya -->
   </body>
